--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,143 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Inter', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #232526;
+  color: white;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.info{
+  text-align: center;
+  
+}
+
+.container{
+  width: 317px;
+  background: #1A1B21;
+  overflow: hidden;
+  margin: auto;
+}
+.info > img{
+  width: 317px;
+  height: 280px;
+  object-fit: cover;
+
+}
+
+.info-name{ 
+text-align: center;
+margin-top: 10px;
+
+}
+
+.info-profession{
+  font-weight: 400;
+font-size: 12.8px;
+line-height: 15px;
+text-align: center;
+margin-top: 5px;
+color: #F3BF99;
+}
+
+
+
+.info-website{
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
+font-size: 10.24px;
+line-height: 150%;
+}
+
+.btn > img{
+  width: 15px;
+  height: 15px;
+}
+.email{
+  background: #fff;;
+}
+.email > a{
+  color: black;
+}
+.linkedin {
+  background:  #5093E2 ;
+}
+.linkedin >a {
+  color: white;
+}
+
+.btn{
+  display: flex;
+  width: 117px;
+  /* color: black; */
+  /* border: 1px solid red; */
+  /* justify-content: space-around; */
+  gap: 6px;
+  justify-content: center;
+  align-items: center;
+  padding: 6px 5px;
+  border-radius: 6px;
+  color: white;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+}
+.buttons a {
+  text-decoration: none;
+}
+.buttons{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 30px;
+  margin-top: 15px
+
+}
+
+.linkedin img{
+  background: white;
+}
+
+/* Info ends here */
+
+/* About Starts */
+
+.about, .interest {
+  padding: 20px 20px 0px 20px;
+}
+
+.about h3, .interest h3{
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+}
+.about > p , .interest p{
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 150%;
+  color: #DCDCDC;
+  margin-top: 10px;
+}
+
+/* About and interest ends here  */
+
+.footer{
+  background: #161619;
+  display: flex;
+  justify-content: space-between;
+  padding: 17px 50px;
+  margin-top: 10px;
 }
